--- a/package.json
+++ b/package.json
@@ -10,6 +10,14 @@
 		"astro": "astro"
 	},
 	"dependencies": {
-		"astro": "^2.0.14"
+		"@astrojs/tailwind": "^3.0.1",
+		"astro": "2.0.14",
+		"tailwindcss": "^3.0.24"
+	},
+	"devDependencies": {
+		"@typescript-eslint/parser": "^5.53.0",
+		"eslint": "^8.34.0",
+		"eslint-plugin-astro": "^0.23.0",
+		"standard": "^17.0.0"
 	}
 }
