--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 	},
 	"dependencies": {
 		"@astrojs/tailwind": "^3.0.1",
+		"add-to-calendar-button": "^2.1.4",
 		"astro": "2.0.14",
 		"tailwindcss": "^3.0.24"
 	},
